# AI_Agent

./: .gitignore  README.md  RUN_SUMMARY.md  config.yaml  create_sample_wif_requirements.py  generate_test_cases_excel.py  launch_edge_debug.bat  pyproject.toml  run_demo.py  run_gui.bat  testgen_gui.py  wif_testcase_generator.py
sample_inputs/: WIF_ECM_Requirements_Specification.xlsx  requirements.txt
src/testgenai/: __init__.py
src/testgenai/a2l/: a2l_parser.py  signal_registry.py
src/testgenai/components/: components_parser.py
src/testgenai/config/: default.yaml
src/testgenai/ingestion/: doc_parser.py  srs_parser.py  stp_loader.py
src/testgenai/llm_copilot/: copilot_session.py  prompt_builder.py  response_parser.py
src/testgenai/mapping/: gap_analysis.py  traceability.py
src/testgenai/models/: requirement.py  scenario.py  signal.py  testcase.py
src/testgenai/orchestration/: cli.py  pipeline.py
src/testgenai/reports/: analysis_report.py  scenarios_doc.py  stp_writer.py
src/testgenai/rules/: istqb_rules.py  rule_engine.py
src/testgenai/scenarios/: generator.py
src/testgenai/storage/: db.py  schema.sql  step_library.py  vi_library.py
src/testgenai/teststand/: xml_builder.py
src/testgenai/wif_ecm/: __init__.py  generator.py  models.py  validators.py
tests/: test_a2l_parser.py  test_doc_parser.py  test_mapping.py  test_rules.py  test_scenarios.py  test_stp_writer.py  test_teststand_xml.py
